2007-06-14  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintSession.cpp:
	* embed/mozilla/GeckoPrintSession.h:

	Set the print as cancelled in the print settings too, see
	https://bugzilla.mozilla.org/show_bug.cgi?id=253926.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix go button behaviour to react to button-release-event and not
	button-press-event. Patch by Sebastiaan Samyn. Bug #441419.

2007-05-28  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post release version bump.

2007-05-28  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.2 ===

	* configure.ac:

2007-05-18  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/popup-commands.c:
	* lib/ephy-file-helpers.c:
	Avoid opening nautilus if downloads are done to Desktop. This re-fixes
	bug #383698.

2007-04-24  Diego Escalante Urrelo <diegoe@gnome.org>

	* embed/ephy-embed-dialog.c:
	Fix some strict-aliasing warnings.

2007-04-20  Bastien Nocera  <hadess@hadess.net>

	* data/mime-types-permissions.xml: Add "application/x-quicktimeplayer"
	and "application/x-quicktime-media-link" to the safe mime-types
	(Closes: #431665)

2007-04-16  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Middle clicking the Go button should open the location bar address
	content in a new tab. Bug #362591.

2007-04-09  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-04-09  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.1 ===

	* configure.ac:
	* doc/reference/tmpl/ephy-embed.sgml:

2007-04-09  Christian Persch  <chpe@gnome.org>

	* data/glade/print.glade:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:

	Fix printing of frames.

2007-03-29  Christian Persch  <chpe@gnome.org>

	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):

	#if 0 some currently unused code. Bug #423907.
