@@ -1,3 +1,14 @@
+2007-06-28  Christian Persch  <chpe@gnome.org>
+
+	* configure.ac:
+	* data/Makefile.am:
+	A data/weasel-ua-pref.js.in:
+
+        Make UA ff-compatible. This fixes
+        https://bugzilla.mozilla.org/show_bug.cgi?id=334967 . See also
+        Camino bug https://bugzilla.mozilla.org/show_bug.cgi?id=384721 and
+        https://bugzilla.mozilla.org/show_bug.cgi?id=385999 for discussion.
+
 2007-06-14  Christian Persch  <chpe@gnome.org>
 
 	* embed/mozilla/GeckoPrintService.cpp:
